{
    "name": "DefaultInput",
    "maps": [
        {
            "name": "Character",
            "id": "b83a8e8a-1674-4c57-b22a-98ec47ab0f36",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "23bd12fa-e08b-4631-b95c-f15888ccbf58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "19260f87-a301-476b-a66d-d8ed92da1ae9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e9eee377-4d9a-4d94-a156-c8fd4091d51e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "94876d87-0a0a-4dc3-91e7-f6a622f6cf26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Prone",
                    "type": "PassThrough",
                    "id": "db5c78b6-e516-4c2b-83a2-c36df1fdaf4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "6457bdba-8745-43dd-956d-3abbdd1266d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SprintReleased",
                    "type": "Button",
                    "id": "54b91d69-d7c0-4bda-adbb-38364e209f59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3d89c45-21d0-4f86-beae-9ee45cd24cd9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "15d186c3-88a0-4caf-a7af-0f9004e4fc4a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e98d1c02-8b1b-438c-abc7-1075b547b95f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "16667b64-c319-458a-8791-d4286e2e355d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6fb08d5f-8b61-45a0-806f-8646fd89892d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fb6b137f-c15c-4cde-a8ac-9b2a4ed549e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "630eae76-f0e0-47f6-8233-8ec1963d49e5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7cca40e-a01f-46bb-bf27-b0d70354bc8b",
                    "path": "<Keyboard>/c",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93d43bb6-c36e-49c7-acc2-9773d1cd68e2",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2122f938-24d8-4648-b420-edab70f40172",
                    "path": "<Keyboard>/c",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Prone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96ef5d73-17ca-4144-984e-1c304dd1038d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f587d2d-2636-4254-a4d7-41204e6e3b8e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "18cf7efa-861d-4dc2-bbc7-4d14e302bc9d",
            "actions": [
                {
                    "name": "Fire1Pressed",
                    "type": "Button",
                    "id": "4db3d91d-f3fc-47a1-b7bd-a3620438a77a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Released",
                    "type": "Button",
                    "id": "647c031e-c6de-4922-8941-054acb81c968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2Pressed",
                    "type": "Button",
                    "id": "9b5831ca-8221-478e-8d20-92dec50abe26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2Released",
                    "type": "Button",
                    "id": "ffe64075-3f9c-436d-bd8f-9165b2f5bf77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponHotKey1Pressed",
                    "type": "Button",
                    "id": "b7b341b9-93c4-4b38-8e15-981ae7ad9087",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponHotKey1Released",
                    "type": "Button",
                    "id": "fa5564ae-0017-4c8e-9c88-bed3ff09ae75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponHotKey2Pressed",
                    "type": "Button",
                    "id": "277cc668-1646-498f-8c5a-c0ae8a58598c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponHotKey2Released",
                    "type": "Button",
                    "id": "19598246-cee8-48ed-8a99-4696b2dd72cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a878562d-c3c6-40d7-8ef5-15a87ee8f48a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5550c4-ea99-4715-b1d4-cd32812bb0cc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57341a8c-962d-40c0-afdf-df0cbf2e7db5",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponHotKey1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b05a39c-cb95-4119-88a9-967624ee7725",
                    "path": "<Keyboard>/1",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponHotKey1Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9635521-70b4-44fd-b424-585c88274237",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponHotKey2Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "815806df-640e-4111-b634-dda86c827f34",
                    "path": "<Keyboard>/2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponHotKey2Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08f9ed16-92d2-4e12-9844-806887d38de6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d74233ca-cc5b-43b7-af41-97b8a9677908",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2Released",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}